# LRWidgets

./: CMakeLists.txt  ExportLRWidgets.h  LICENSE.md  README.md
examples/: CMakeLists.txt  main.cpp
translation/: LRWidgets_zh_CN.ts
widget/: DualSlider.cpp  DualSlider.h  EditSlider.cpp  EditSlider.h  FloatEditDualSlider.cpp  FloatEditDualSlider.h  FloatEditSlider.cpp  FloatEditSlider.h  ImageButton.cpp  QLineEditEx.cpp  QLineEditEx.h  imagebutton.cpp  imagebutton.h  imagebutton.ui
